objects/InitiateRiskReviewConfig__mdt.object
<CustomObject>
    <description>PR 3.0 It is a configuration for creating url with suitable field values.</description>
    <fields>
        <fullName>Default__c</fullName>
        <label>Default</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Value__c</fullName>
        <label>Expected Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldAPI__c</fullName>
        <label>FieldAPI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_True__c</fullName>
        <label>If True</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Apttus__APTS_Agreement__c</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectType__c</fullName>
        <label>ProjectType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UrlParameter__c</fullName>
        <label>UrlParameter</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>InitiateRiskReviewConfig</label>
    <listViews>
        <fullName>MZ</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Default__c</columns>
        <columns>Expected_Value__c</columns>
        <columns>FieldAPI__c</columns>
        <columns>If_True__c</columns>
        <columns>Object__c</columns>
        <columns>ProjectType__c</columns>
        <columns>UrlParameter__c</columns>
        <filterScope>Everything</filterScope>
        <label>MZ</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>InitiateRiskReviewConfigs</pluralLabel>
</CustomObject>